--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <div class="bottom-container">
     <a class="footer-link" href="https://opensea.io/account">Opensea.io</a>
     <a class="footer-link" href="https://twitter.com/newnft_world">Twitter</a>
-    <a class="footer-link" href="F:\me\web\NFT\index.html">instagram</a>
+    <a class="footer-link" href="https://www.instagram.com/d._koushik/">instagram</a>
     <p class="copy-right">© NEW_NFT_WORLD.</p>
   </div>
 </body>
